# Rust-RayTracer

./: .gitignore  Cargo.toml  README.md
src/: animate.rs  camera.rs  intersection.rs  lib.rs  light.rs  main.rs  object.rs  ray.rs  scene.rs  utils.rs
src/object/: sphere.rs
