[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
description = "A simple RayTracer project, that renders Spheres with different lighting and material configurations."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
rand = "0.8.5"
rayon = "1.5.3"
assert_approx_eq = "1.1.0"